<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Header Title -->
    <string name="header_title_about">About</string>
    <string name="header_title_scan">Captix Scan</string>
    <string name="header_title_setting">Settings</string>
    <string name="header_title_history">History</string>

    <!-- Message common -->
    <string name="app_name">Captix Scan</string>
    <string name="action_settings">Settings</string>
    <string name="mess_waitting">Processing...</string>
    <string name="scanner">SCANNER</string>
    <string name="sound">Sound</string>
    <string name="auto_open_url">Always ask before opening</string>
    <string name="url_profile">URL Profile</string>
    <string name="auto_close">Auto close URL view after</string>
    <string name="share">SHARE</string>
    <string name="message">Message</string>
    <string name="mail">Mail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="common_imagebutton_description">imagebutton</string>
    <string name="cancel">Cancel</string>
    <string name="mess_error_network">No Internet connection, please check your network.</string>
    <string name="mess_error_urlprofile">URL Profile is required.</string>
    <string name="mess_update_urlprofile_successfull">URL Profile has been updated successfully.</string>
    <string name="mess_update_urlprofile">Invalid URL Profile.</string>
    <string name="mess_example_urlprofile">Use *var* to indicate where to inject the code value http://cptr.it/*var* </string>

    <!-- text use to show in layout not important -->
    <string name="link">cptr.it</string>
    <string name="time_setting">5 seconds</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="about">      This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible.</string>

    <!-- EverNote -->
    <string name="activity_create_evernote_btn_select_notebook">Select Notebook</string>
    <string name="activity_create_evernote_title">Note Title</string>
    <string name="activity_create_evernote_content">Note Content</string>
    <string name="activity_create_evernote_error_listing_notebooks">Error listing notebooks</string>
    <string name="activity_create_evernote_error_creating_notestore">Error creating notestore</string>
    <string name="activity_create_evernote_error_saving_note">Error saving note</string>
    <string name="activity_create_evernote_error_listing_notes">Error listing note</string>
    <string name="activity_create_evernote_empty_content_error">Note title and content cannot be empty</string>
    <string name="activity_create_evernote_note_saved">Note saved to Evernote</string>

    <drawable name="red_drawable">#CCAA1883</drawable>
    <!-- Scan Activity -->
    <string name="activity_scan_open_url_confirm">Are you sure you want to browse scanned result?</string>
    <string name="activity_scan_open_browser_title"> Open Browser</string>
    <string name="activity_scan_invalid_url_title">Invalid URL</string>
    <string name="activity_scan_invalid_url_message">Invalid URL Format</string>
    <string name="activity_scan_camera_unavailable">Camera is not available</string>

    <!-- History Activity -->
    <string name="activity_history_delete_history_confirm">Are you sure you want to delete this scan history?</string>
    <string name="activity_history_delete_all_history_confirm">Are you sure you want to delete all scan history?</string>
    <string name="activity_history_delete_history_title">Delete History</string>
    <string name="activity_history_delete_all_history_title">Delete All History</string>
    <string name="activity_history_header_deleteall">Delete All</string>

    <drawable name="red_drawable">#CCAA1883</drawable>
    <drawable name="green_drawable">#CC123Bff</drawable>

    <string name="content_html">content_detail.html</string>
    <string name="content_to_share_social_media">Need a QR or barcode reader? Captix: Scan is the best one I\'ve found. Give it a try! </string>
    <string name="mess_post_success">Commment has been posted in your wall!</string>
    <string name="press_exit"> Press again to exit.</string>
    <string name="activity_settting_confirm">Are you sure you want to post on your wall?</string>
    <string name="email_title_share">Captix Scan Share</string>
    <string name="mess_not_exist_shortcut">Sorry, no shortcut exists. Create a shortcut in Settings.</string>
    <string name="mess_update_urlshortcut_successfull">URL Shortcut has been updated successfully.</string>

</resources>