<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@color/Orange" >

                <ImageButton
                    android:id="@+id/setting_ib_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_menu"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/White"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@color/background_gray" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/scanner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/sound" />

                <com.magrabbit.qrcodescan.customize.MySwitch
                    android:id="@+id/settings_switch_sound"
                    style="@style/mySwitchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    mySwitch:backgroundMask="@drawable/smask_background_copy"
                    mySwitch:leftBackground="@drawable/sleft_background_copy1"
                    mySwitch:pushStyle="true"
                    mySwitch:rightBackground="@drawable/sright_background_copy1"
                    mySwitch:textOff="OFF"
                    mySwitch:textOn="ON"
                    mySwitch:textOnThumb="false"
                    mySwitch:thumb="@drawable/stoggle_copy1"
                    mySwitch:thumbExtraMovement="25dp"
                    mySwitch:track="@drawable/sgroove_copy"
                    mySwitch:trackTextPadding="2dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/auto_open_url" />

                <com.magrabbit.qrcodescan.customize.MySwitch
                    android:id="@+id/settings_switch_open_url"
                    style="@style/mySwitchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    mySwitch:backgroundMask="@drawable/smask_background_copy"
                    mySwitch:leftBackground="@drawable/sleft_background_copy1"
                    mySwitch:pushStyle="true"
                    mySwitch:rightBackground="@drawable/sright_background_copy1"
                   mySwitch:textOff="OFF"
                    mySwitch:textOn="ON"
                    mySwitch:textOnThumb="false"
                    mySwitch:thumb="@drawable/stoggle_copy1"
                    mySwitch:thumbExtraMovement="25dp"
                    mySwitch:track="@drawable/sgroove_copy"
                    mySwitch:trackTextPadding="2dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/url_profile" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="25dp"
                    android:gravity="right"
                    android:text="@string/link"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/auto_close" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/time_setting"
                    android:textColor="@android:color/darker_gray" />

                <ImageButton
                    android:id="@+id/settings_ib_auto_close"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_next"
                    android:contentDescription="@string/common_imagebutton_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@color/background_gray" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/share" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_message"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/message" />

                <ImageButton
                    android:id="@+id/settings_ib_share_message"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_next"
                    android:contentDescription="@string/common_imagebutton_description" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_email"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/mail" />

                <ImageButton
                    android:id="@+id/settings_ib_share_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_next"
                    android:contentDescription="@string/common_imagebutton_description" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_twiiter"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/twitter" />

                <ImageButton
                    android:id="@+id/settings_ib_share_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_next"
                    android:contentDescription="@string/common_imagebutton_description" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_facebook"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/facebook" />

                <ImageButton
                    android:id="@+id/settings_ib_share_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_next"
                    android:contentDescription="@string/common_imagebutton_description" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>